spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__too_many_args.snap
---
source: spade-tests/src/hir_lowering.rs
---
fn test(a: bool, b: bool) -> bool __builtin__
fn main() -> bool {
    test(true, true, true)
}


error: Expected 2 arguments, got 3
  ┌─ testinput:3:9
  │
3 │     test(true, true, true)
  │         ^^^^^^^^^^^^^^^^^^ Expected 2 arguments


